2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_mysql.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives.
	
2011-01-25  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c: Fixed a bug in data types of small integers
			       on 64-bit machines. Who would have imagined
			       that MSYQL_TYPE_LONG doesn't mean 'long' but
			       rather 'int'?
	* tests/tdbcmysql.test (tdbc::mysql-1.6,24.[4567]):
		Quieted test cases on 64-bit machines and on MySQL earlier
		than 5.1.16, which is the first version on which
		'foreignkeys' functions correctly.
	Thanks to Damon Courtney for reporting these bugs.

2010-12-28  Kevin B. Kenny  <kennykb@acm.org>

	* generic/fakemysql.h: Added the MYSQL data structure and the
			       nest of other definitions that it depends on.
	* generic/mysqlStubDefs.txt: Added mysql_affected_rows and
				     mysql_field_count.
	* generic/mysqlStubInit.c, generic/mysqlStubs.h: Regenerated.
	* generic/tdbcmysql.c: Added 'evaldirect' method that allows
			       executing statements that are unimplemented
			       in the MySQL prepared statement API.
	* generic/tdbcmysql.tcl: Did a rough (not really functional) hack
	                         at formatting prepared statements.
	* tests/tdbcmysql.test (tdbc::mysql-25.*): Added two tests for
	creating a (parameterless) stored procedure and executing it.

2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Added missing TCLOO_CFLAGS because Windows build
			failed to link without it.
	* configure: autoconf 2-59

	* generic/mysqlStubInit.c:
			Made changes to attempt to open the
			MySQL client library by SONAME as well as
			pathname, in an effort to fit in better
			with systems where libmysqlclient-devel
			is not installed.

	* library/tdbcmysql.tcl:
	* tests/tdbcmysql.test:
			Changed 'keySequence' to 'ordinalPosition' in
			'foreignkeys' for consistency with 'primarykeys'.

	* configure.in:
	* Makefile.in: